force-app/main/default/objects/employe1__c/employe1__c.object-meta.xml
<CustomObject>
    <label>employe1</label>
    <nameField>
        <label>employe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>employe1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>