force-app/main/default/objects/employe1__c/fields/account1__c.field-meta.xml
<CustomField>
    <fullName>account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>account1</label>
    <referenceTo>account1__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <type>Lookup</type>
</CustomField>