force-app/main/default/objects/employe1__c/fields/attendance__c.field-meta.xml
<CustomField>
    <fullName>attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>attendance</label>
    <referenceTo>attendance__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <type>Lookup</type>
</CustomField>