force-app/main/default/objects/employe1__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <label>department</label>
    <referenceTo>department__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>