force-app/main/default/objects/employe1__c/fields/event1__c.field-meta.xml
<CustomField>
    <fullName>event1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>event1</label>
    <referenceTo>event1__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <type>Lookup</type>
</CustomField>