force-app/main/default/objects/employe1__c/fields/location1__c.field-meta.xml
<CustomField>
    <fullName>location1__c</fullName>
    <label>location1</label>
    <referenceTo>location1__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>