force-app/main/default/objects/employe1__c/fields/notice__c.field-meta.xml
<CustomField>
    <fullName>notice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>notice</label>
    <referenceTo>notice__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <type>Lookup</type>
</CustomField>