force-app/main/default/objects/employe1__c/fields/security_deposit__c.field-meta.xml
<CustomField>
    <fullName>security_deposit__c</fullName>
    <label>security deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>