force-app/main/default/objects/employe1__c/fields/task1__c.field-meta.xml
<CustomField>
    <fullName>task1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>task1</label>
    <referenceTo>task1__c</referenceTo>
    <relationshipLabel>employe1</relationshipLabel>
    <relationshipName>employe1</relationshipName>
    <type>Lookup</type>
</CustomField>